# probable-octo-chainsaw

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  KRAKEN_DEPLOYMENT.md  LICENSE  QuantiFire_YouTube_Scripts_MASTER.md  README.md  quant.md  test_neo4j_auth.py  transact2web3.md
.qwen/: settings.json
psychic-invention/: Cargo.toml  README.md  REDIS_SETUP.md  docker-compose.kb.yml  requirements.txt
psychic-invention/.claude/: settings.local.json
psychic-invention/app/: CLAUDE.md  __init__.py  asset_universe.py  deriv_api_client.py  error_handling.py  health_check.py  higher_moments.py  main.py  market_data_endpoints.py  portfolio_engine.py  pricing_engine_py.py  rl_calibration.py  telemetry.py  transact_routes.py
psychic-invention/benches/: performance_benchmarks.rs  pricing_benchmarks.rs  simple_benchmarks.rs
psychic-invention/frontend/: .env.example  CLAUDE.md  EXPORT_FUNCTIONALITY.md  TASK_6.2_SUMMARY.md  TASK_6.3_SUMMARY.md  TASK_6.3_VALIDATION.md  TASK_9_SUMMARY.md  export-test.html  index.html  package-lock.json  package.json  tailwind.config.js  test-runner.js  tsconfig.json  validate-results-tests.js  validate-tests.ps1  vite.config.ts
psychic-invention/knowledge_base/: README.md
psychic-invention/notebooks/: heston_rl.ipynb
psychic-invention/scripts/: generate_cypher_seed.py  ingest_trading_strategies.py  load_knowledge_base.py
psychic-invention/src/: black_scholes.rs  fft_pricing.rs  fft_pricing_enhanced.rs  fft_pricing_tests.rs  greeks.rs  greeks_core_tests.rs  greeks_tests.rs  heston.rs  lib.rs  monte_carlo.rs  performance_monitor.rs
(+455 files in other folders)
